tests/baselines/reference/superCallBeforeThisAccessing4.errors.txt
tests/cases/conformance/classes/superCallBeforeThisAccessing4.ts(3,5): error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'
tests/cases/conformance/classes/superCallBeforeThisAccessing4.ts(11,5): error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'


==== tests/cases/conformance/classes/superCallBeforeThisAccessing4.ts (2 errors) ====
    class D extends null {
        private _t;
        constructor() {
        ~~~~~~~~~~~~~~~
            this._t;
    ~~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'
    }
    
    class E extends null {
        private _t;
        constructor() {
        ~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
            this._t;
    ~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'
    }